--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <div class="card-header" id="d1_h1">
               <h5 class="mb-0">
                 <button class="btn btn-link" data-toggle="collapse" data-target="#d1_1" aria-expanded="true" aria-controls="d1_1">
-                  <b>10h00-12h00</b> [TALK] Leading and Attending to Brainhack Projects - <b>Guillaume Auzias</b>
+                  <b>10h00-12h00</b> [TUTORIAL] Leading and contributing to Brainhack Projects: an introductory guide - <b>Guillaume Auzias</b>
                 </button>
               </h5>
             </div>
@@ -245,30 +245,13 @@
             <div class="card-header" id="d2_h2">
               <h5 class="mb-0">
                 <button class="btn btn-link" data-toggle="collapse" data-target="#d2_2" aria-expanded="true" aria-controls="d2_2">
-                  <b>14h00-15h00</b> [TALK]  A shared NHP utah array public dataset - <b>Thomas Brochier</b>
+                  <b>14h00-16h00</b> [UNCONFERENCE/DEMO] An open electrophysiological dataset recorded in non-human primates: acquisition, curation and exploitation using open source tools (odML, neo, Elephant) - <b>Thomas Brochier & Julia Sprenger</b>
                 </button>
               </h5>
             </div>
             <div id="d2_2" class="collapse" aria-labelledby="d2_h2" data-parent="#accordion">
               <div class="card-body">
                 Small description is coming
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div id="accordion">
-          <div class="card">
-            <div class="card-header" id="d2_h3">
-              <h5 class="mb-0">
-                <button class="btn btn-link" data-toggle="collapse" data-target="#d2_3" aria-expanded="true" aria-controls="d2_3">
-                  <b>15h00-16h00</b> [DEMO] Loading neurophysiological data using Neo - <b>Julia Sprenger</b>
-                </button>
-              </h5>
-            </div>
-            <div id="d2_3" class="collapse" aria-labelledby="d2_h3" data-parent="#accordion">
-              <div class="card-body">
-                Small description is coming + specify that the demo is going to be on Thomas' data he presented before
               </div>
             </div>
           </div>
