--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             <div class="card-header" id="d2_h1">
               <h5 class="mb-0">
                 <button class="btn btn-link" data-toggle="collapse" data-target="#d2_1" aria-expanded="true" aria-controls="d2_1">
-                  <b>10h00-12h00</b> [TALK] [EXTERNAL SPEAKER] - <b>[TO BE DEFINED]</b>
+                  <b>10h00-12h00</b> [TO BE DEFINED] - <b>[TO BE DEFINED]</b>
                 </button>
               </h5>
             </div>
@@ -269,11 +269,28 @@
               <div class="card-header" id="d3_h1">
                 <h5 class="mb-0">
                   <button class="btn btn-link" data-toggle="collapse" data-target="#d3_1" aria-expanded="true" aria-controls="d3_1">
-                    <b>10h00-17h00</b> [HACKING] Hacking day
+                    <b>10h00-14h00</b> [HACKING] Hacking day
                   </button>
                 </h5>
               </div>
               <div id="d3_1" class="collapse" aria-labelledby="d3_h1" data-parent="#accordion">
+                <div class="card-body">
+                  Small description is coming
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div id="accordion">
+            <div class="card">
+              <div class="card-header" id="d3_h2">
+                <h5 class="mb-0">
+                  <button class="btn btn-link" data-toggle="collapse" data-target="#d3_2" aria-expanded="true" aria-controls="d3_2">
+                    <b>14h00-15h00</b> [TALK] Hands on reproducibility - <b>Guillaume Dumas</b>
+                  </button>
+                </h5>
+              </div>
+              <div id="d3_2" class="collapse" aria-labelledby="d3_h2" data-parent="#accordion">
                 <div class="card-body">
                   Small description is coming
                 </div>
