--- a/index.html
+++ b/index.html
@@ -87,21 +87,27 @@
 
         <div class="row" data-aos="zoom-in">
 
-          <div class="col-lg-4 col-md-4 col-4 d-flex align-items-center justify-content-center">
+          <div class="col-lg-3 col-md-4 col-4 d-flex align-items-center justify-content-center">
             <a href="http://www.int.univ-amu.fr/">
               <img src="images/int.png" class="img-fluid" alt="" width="400">
             </a>
           </div>
 
-          <div class="col-lg-4 col-md-4 col-4 d-flex align-items-center justify-content-center">
+          <div class="col-lg-3 col-md-4 col-4 d-flex align-items-center justify-content-center">
             <a href="https://www.univ-amu.fr/">
-              <img src="images/aix_marseille.png" class="img-fluid" alt="" width="800">
+              <img src="images/aix_mrs.png" class="img-fluid" alt="" width="800">
             </a>
           </div>
 
-          <div class="col-lg-4 col-md-4 col-4 d-flex align-items-center justify-content-center">
+          <div class="col-lg-3 col-md-4 col-4 d-flex align-items-center justify-content-center">
+            <a href="https://www.cnrs.fr/fr/page-daccueil">
+              <img src="images/cnrs.png" class="img-fluid" alt="" width="150">
+            </a>
+          </div>
+
+          <div class="col-lg-3 col-md-4 col-4 d-flex align-items-center justify-content-center">
             <a href="https://brainhack.org/global2020/">
-              <img src="images/brainhack.png" class="img-fluid" alt="">
+              <img src="images/brainhack.png" class="img-fluid" alt="" width="200">
             </a>
           </div>
 
