--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
         <div class="section-title">
           <h3>2nd December</h3>
         </div>
+        <h4>Morning</h4>
 
         <!-- MORNING -->
         <div id="accordion">
@@ -135,13 +136,15 @@
             <div class="card-header" id="d1_h1">
               <h5 class="mb-0">
                 <button class="btn btn-link" data-toggle="collapse" data-target="#d1_1" aria-expanded="true" aria-controls="d1_1">
-                  <b>10h00-12h00</b> [TUTORIAL] Leading and contributing to Brainhack Projects: an introductory guide - <b>Guillaume Auzias</b>
+                  <b>9h00-10h15</b> Introduction BrainHack Marseille
                 </button>
               </h5>
             </div>
             <div id="d1_1" class="collapse" aria-labelledby="d1_h1" data-parent="#accordion">
               <div class="card-body">
-                Small description is coming
+                <p><b>9h00-9h15</b> Introduction BrainHack Marseille</p>
+                <p><b>9h15-9h45</b> Leading and contributing to Brainhack Projects: an introductory guide - <b>Guillaume Auzias</b></p>
+                <p><b>9h45-10h15</b> Projects ignition</p>
               </div>
             </div>
           </div>
@@ -149,13 +152,15 @@
 
         <br>
 
+        <h4>Afternoon</h4>
+
         <!-- AFTERNOON -->
         <div id="accordion">
           <div class="card">
             <div class="card-header" id="d1_h2">
               <h5 class="mb-0">
                 <button class="btn btn-link" data-toggle="collapse" data-target="#d1_2" aria-expanded="true" aria-controls="d1_2">
-                  <b>14h00-14h30</b> [DEMO] Extracting task-related brain networks using Frites - <b>Etienne Combrisson</b>
+                  <b>14h00-16h00</b> Hacking
                 </button>
               </h5>
             </div>
@@ -172,47 +177,16 @@
             <div class="card-header" id="d1_h3">
               <h5 class="mb-0">
                 <button class="btn btn-link" data-toggle="collapse" data-target="#d1_3" aria-expanded="true" aria-controls="d1_3">
-                  <b>14h30-15h00</b> [DEMO] NeuroPycon [TITLE TO BE DEFINED] - <b>David Meunier</b>
+                  <b>16h00-17h00</b> Software demonstration
                 </button>
               </h5>
             </div>
             <div id="d1_3" class="collapse" aria-labelledby="d1_h3" data-parent="#accordion">
               <div class="card-body">
-                Small description is coming
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div id="accordion">
-          <div class="card">
-            <div class="card-header" id="d1_h4">
-              <h5 class="mb-0">
-                <button class="btn btn-link" data-toggle="collapse" data-target="#d1_4" aria-expanded="true" aria-controls="d1_4">
-                  <b>15h00-15h30</b> [DEMO] Macapype [TITLE TO BE DEFINED] - <b>[TO BE DEFINED]</b>
-                </button>
-              </h5>
-            </div>
-            <div id="d1_4" class="collapse" aria-labelledby="d1_h4" data-parent="#accordion">
-              <div class="card-body">
-                Small description is coming
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div id="accordion">
-          <div class="card">
-            <div class="card-header" id="d1_h5">
-              <h5 class="mb-0">
-                <button class="btn btn-link" data-toggle="collapse" data-target="#d1_5" aria-expanded="true" aria-controls="d1_5">
-                  <b>15h30-16h00</b> [DEMO] Slam [TITLE TO BE DEFINED] - <b>Guillaume Auzias</b>
-                </button>
-              </h5>
-            </div>
-            <div id="d1_5" class="collapse" aria-labelledby="d1_h5" data-parent="#accordion">
-              <div class="card-body">
-                Small description is coming
+                <p><b>16h00-16h15</b> Extracting task-related brain networks using Frites - <b>Etienne Combrisson</b></p>
+                <p><b>16h15-16h30</b> NeuroPycon [TITLE TO BE DEFINED] - <b>David Meunier</b>
+                <p><b>16h30-16h45</b> Macapype [TITLE TO BE DEFINED] - <b>[TO BE DEFINED]</b>
+                <p><b>16h45-17h00</b> Slam [TITLE TO BE DEFINED] - <b>Guillaume Auzias</b>
               </div>
             </div>
           </div>
@@ -225,13 +199,15 @@
           <h3>3rd December</h3>
         </div>
 
+        <h4>Morning</h4>
+
         <!-- MORNING -->
         <div id="accordion">
           <div class="card">
             <div class="card-header" id="d2_h1">
               <h5 class="mb-0">
                 <button class="btn btn-link" data-toggle="collapse" data-target="#d2_1" aria-expanded="true" aria-controls="d2_1">
-                  <b>10h00-12h00</b> [TO BE DEFINED] - <b>[TO BE DEFINED]</b>
+                  <b>09h00-11h30</b> Hacking
                 </button>
               </h5>
             </div>
@@ -243,21 +219,56 @@
           </div>
         </div>
 
-        <br>
-
-        <!-- AFTERNOON -->
         <div id="accordion">
           <div class="card">
             <div class="card-header" id="d2_h2">
               <h5 class="mb-0">
                 <button class="btn btn-link" data-toggle="collapse" data-target="#d2_2" aria-expanded="true" aria-controls="d2_2">
-                  <b>14h00-16h00</b> [UNCONFERENCE/DEMO] An open electrophysiological dataset recorded in non-human primates: acquisition, curation and exploitation using open source tools (odML, neo, Elephant) - <b>Thomas Brochier & Julia Sprenger</b>
+                  <b>11h30-12h30</b> Unconference - <b>Cyril Pernet</b>
                 </button>
               </h5>
             </div>
             <div id="d2_2" class="collapse" aria-labelledby="d2_h2" data-parent="#accordion">
               <div class="card-body">
+                About COBIDAS MEEG - <b>Cyril Pernet</b>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <br>
+        <h4>Afternoon</h4>
+
+        <!-- AFTERNOON -->
+        <div id="accordion">
+          <div class="card">
+            <div class="card-header" id="d2_h3">
+              <h5 class="mb-0">
+                <button class="btn btn-link" data-toggle="collapse" data-target="#d2_3" aria-expanded="true" aria-controls="d2_3">
+                  <b>14h00-16h00</b> Hacking
+                </button>
+              </h5>
+            </div>
+            <div id="d2_3" class="collapse" aria-labelledby="d2_h3" data-parent="#accordion">
+              <div class="card-body">
                 Small description is coming
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div id="accordion">
+          <div class="card">
+            <div class="card-header" id="d2_h4">
+              <h5 class="mb-0">
+                <button class="btn btn-link" data-toggle="collapse" data-target="#d2_4" aria-expanded="true" aria-controls="d2_4">
+                  <b>16h00-17h00</b> Unconference - <b>Thomas Brochier & Julia Sprenger</b>
+                </button>
+              </h5>
+            </div>
+            <div id="d2_4" class="collapse" aria-labelledby="d2_h4" data-parent="#accordion">
+              <div class="card-body">
+                An open electrophysiological dataset recorded in non-human primates: acquisition, curation and exploitation using open source tools (odML, neo, Elephant) - <b>Thomas Brochier & Julia Sprenger</b>
               </div>
             </div>
           </div>
@@ -269,13 +280,14 @@
           <div class="section-title">
             <h3>4th December</h3>
           </div>
+          <h4>Morning</h4>
 
           <div id="accordion">
             <div class="card">
               <div class="card-header" id="d3_h1">
                 <h5 class="mb-0">
                   <button class="btn btn-link" data-toggle="collapse" data-target="#d3_1" aria-expanded="true" aria-controls="d3_1">
-                    <b>10h00-14h00</b> [HACKING] Hacking day
+                    <b>09h00-14h00</b> Hacking
                   </button>
                 </h5>
               </div>
@@ -287,18 +299,38 @@
             </div>
           </div>
 
+          <br>
+          <h4>Afternoon</h4>
+
           <div id="accordion">
             <div class="card">
               <div class="card-header" id="d3_h2">
                 <h5 class="mb-0">
                   <button class="btn btn-link" data-toggle="collapse" data-target="#d3_2" aria-expanded="true" aria-controls="d3_2">
-                    <b>14h00-15h00</b> [TALK] Hands on reproducibility - <b>Guillaume Dumas</b>
+                    <b>14h00-15h00</b> Unconference - <b>Guillaume Dumas</b>
                   </button>
                 </h5>
               </div>
               <div id="d3_2" class="collapse" aria-labelledby="d3_h2" data-parent="#accordion">
                 <div class="card-body">
-                  Small description is coming
+                  Hands on reproducibility - <b>Guillaume Dumas</b>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div id="accordion">
+            <div class="card">
+              <div class="card-header" id="d3_h3">
+                <h5 class="mb-0">
+                  <button class="btn btn-link" data-toggle="collapse" data-target="#d3_3" aria-expanded="true" aria-controls="d3_3">
+                    <b>16h00-16h00</b> Wrapping up about the projects with everybody
+                  </button>
+                </h5>
+              </div>
+              <div id="d3_3" class="collapse" aria-labelledby="d3_h3" data-parent="#accordion">
+                <div class="card-body">
+                  Wrapping up about the projects with everybody + Ending !
                 </div>
               </div>
             </div>
@@ -342,7 +374,7 @@
                 <p>Thisi is a test</p>
               </div>
             </div> -->
-            
+
           <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
@@ -380,8 +412,8 @@
 
               <button class="btn btn-link font-weight-bold" data-toggle="collapse" href="#collapse_project1" role="button" aria-controls="collapse_project1"><h4>Description</h3></button>
 
-              <section class="collapse" id="collapse_project1">            
-                Frites is a recent pure Python package (<a href="https://github.com/brainets/frites/" target="_blank">https://github.com/brainets/frites</a>) to analyse neurophysiological data using within the Information Theoretical framework and to perform group-level statistics on information-based measures. The aim of the software is to extract brain networks that are modulated according to the task (model-based and model free analysis). To this end, Frites contains several CPU-based functions to estimate the directed information flow between brain areas. While those methods estimate the directed connectivity in a reasonable amount of time on small networks, the complexity of larger networks are too demanding for the current CPU implementation. Therefore, the ultimate goal of this project would be to have both a CPU and a GPU implementations of our recent multivariate information flow measure (<a href="https://github.com/brainets/xfrites/blob/main/xfrites/conn/conn_pca_covgc_cpu.py#L115" target="_blank">link here</a>). 
+              <section class="collapse" id="collapse_project1">
+                Frites is a recent pure Python package (<a href="https://github.com/brainets/frites/" target="_blank">https://github.com/brainets/frites</a>) to analyse neurophysiological data using within the Information Theoretical framework and to perform group-level statistics on information-based measures. The aim of the software is to extract brain networks that are modulated according to the task (model-based and model free analysis). To this end, Frites contains several CPU-based functions to estimate the directed information flow between brain areas. While those methods estimate the directed connectivity in a reasonable amount of time on small networks, the complexity of larger networks are too demanding for the current CPU implementation. Therefore, the ultimate goal of this project would be to have both a CPU and a GPU implementations of our recent multivariate information flow measure (<a href="https://github.com/brainets/xfrites/blob/main/xfrites/conn/conn_pca_covgc_cpu.py#L115" target="_blank">link here</a>).
                 <br>The following points are going to be addressed in this project:
 
                 <ul>
