--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
           <h1>Brainhack Marseille</h1>
           <h2>December 2 - December 4 2020</h2>
         </div>
-        <div class="col-lg-6 order-1 order-lg-2 logo" data-aos-delay="200">
-          <img src="images/logo.svg" alt="">
+        <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
+          <img src="images/logo.svg" alt="" class="img-fluid animated">
         </div>
       </div>
     </div>
