--- a/index.html
+++ b/index.html
@@ -291,8 +291,14 @@
 
         <div class="section-title">
           <h2>Projects</h2>
-          <p>Here you can fingd all the informations about the available projects</p>
+          <p>Here you can fingd all the informations about the event projects. <br>
+            If you want to <b>submit a project</b> you should follow the link, fill the form, and send it as a github issue. </p>
         </div>
+        <div class="d-flex justify-content-center">
+          <a class="btn btn-warning" href="https://github.com/Brainhack-Marseille/brainhack-marseille.github.io/issues/new?assignees=&labels=Brainhack+project&template=brainhack-project-template.md&title=" target="_blank"><h4>SUBMIT PROJECT</h4></a>
+        </div>
+
+        <hr>
 
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
           <ol class="carousel-indicators">
