--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
 
         <div class="section-title">
           <h2>Projects</h2>
-          <p>Here you can fingd all the informations about the available projects</p>
+          <p>Here you can find all the informations about the available projects</p>
         </div>
 
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -413,7 +413,7 @@
               <button class="btn btn-link font-weight-bold" data-toggle="collapse" href="#collapse_project1" role="button" aria-controls="collapse_project1"><h4>Description</h3></button>
 
               <section class="collapse" id="collapse_project1">
-                Frites is a recent pure Python package (<a href="https://github.com/brainets/frites/" target="_blank">https://github.com/brainets/frites</a>) to analyse neurophysiological data using within the Information Theoretical framework and to perform group-level statistics on information-based measures. The aim of the software is to extract brain networks that are modulated according to the task (model-based and model free analysis). To this end, Frites contains several CPU-based functions to estimate the directed information flow between brain areas. While those methods estimate the directed connectivity in a reasonable amount of time on small networks, the complexity of larger networks are too demanding for the current CPU implementation. Therefore, the ultimate goal of this project would be to have both a CPU and a GPU implementations of our recent multivariate information flow measure (<a href="https://github.com/brainets/xfrites/blob/main/xfrites/conn/conn_pca_covgc_cpu.py#L115" target="_blank">link here</a>).
+                Frites is a recent pure Python package (<a href="https://github.com/brainets/frites/" target="_blank">https://github.com/brainets/frites</a>) to analyse neurophysiological data within the Information Theoretical framework and to perform group-level statistics on information-based measures. The aim of the software is to extract brain networks that are modulated according to the task (model-based and model free analysis). To this end, Frites contains several CPU-based functions to estimate the directed information flow between brain areas. While those methods estimate the directed connectivity in a reasonable amount of time on small networks, the complexity of larger networks are too demanding for the current CPU implementation. Therefore, the ultimate goal of this project would be to have both a CPU and a GPU implementations of our recent multivariate information flow measure (<a href="https://github.com/brainets/xfrites/blob/main/xfrites/conn/conn_pca_covgc_cpu.py#L115" target="_blank">link here</a>).
                 <br>The following points are going to be addressed in this project:
 
                 <ul>
