--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li class="active"><a href="index.html">Home</a></li>
+          <li><a href="#register">Register</a></li>
           <li><a href="#program">Program</a></li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#team">Team</a></li>
@@ -115,6 +116,21 @@
 
       </div>
     </section><!-- End Cliens Section -->
+
+    <section id="register" class="register">
+      <div class="container" data-aos="fade-up">
+
+        <div class="section-title">
+          <h2>Register</h2>
+        </div>
+
+        <p>To register to the event, please click on the button below to fill the form</p>
+
+        <div class="d-flex justify-content-center">
+          <a class="btn btn-warning" href="https://framaforms.org/brainhack-marseille-2020-1605623349" target="_blank"><h4>REGISTER</h4></a>
+        </div>
+      </div>
+    </section>
 
     <!-- ======= Program Section ======= -->
     <section id="program" class="program">
