--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <h2>December 2 - December 4 2020</h2>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
-          <img src="images/logo.svg" alt="" class="img-fluid animated">
+          <img id="mrs_bb" src="images/logo.svg" alt="" class="img-fluid animated">
         </div>
       </div>
     </div>
@@ -480,7 +480,7 @@
                 GPU programming 20%
               </div>
             </div>
-            
+
           </div>
         </div>
     </section>
