Adding DIGital Lab Book project

--- a/index.html
+++ b/index.html
@@ -379,6 +379,7 @@
           </ol>
           <div class="carousel-inner">
 
+            <!-- PROJECT 1 : GPU FRITES -->
             <div class="carousel-item active">
               <a class="scrollto active" href="#project1">
                 <img class="mx-auto d-block w-50" src="images/projects/project1.svg" alt="First slide">
@@ -391,6 +392,7 @@
               </div>
             </div>
 
+            <!-- PROJECT 2 : eCOBIDAS -->
             <div class="carousel-item">
               <a class="scrollto active" href="#project2">
                 <img class="mx-auto d-block w-50" src="images/projects/project2.jpg" alt="Second slide">
@@ -403,7 +405,22 @@
               </div>
             </div>
 
-<!--             <div class="carousel-item">
+            <!-- PROJECT 3 : DIGital Lab Book -->
+            <div class="carousel-item">
+              <a class="scrollto active" href="#project3">
+                <img class="mx-auto d-block w-50" src="images/projects/project3.png" alt="Third slide">
+              </a>
+              <div class="carousel-caption d-none d-md-block">
+                <a class="scrollto active" href="#project3">
+                  <h5>DIGLaB : DIGital Lab Book</h5>
+                </a>
+                <p>by Fred Barthelemy, Sylvain Takerkart, Julia Sprenger</p>
+              </div>
+            </div>
+
+
+
+            <!-- <div class="carousel-item">
               <a class="scrollto active" href="#project1">
                 <img class="mx-auto d-block w-50" src="images/projects/project1.svg" alt="First slide">
               </a>
@@ -414,6 +431,7 @@
                 <p>by Etienne Combrisson & Ruggero Basanisi</p>
               </div>
             </div> -->
+
 
           <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -570,6 +588,86 @@
         </div>
         <hr style="height:20px">
     <!-- =========================== -->
+
+    <!-- ======= Project1 description bullet ======= -->
+    <a class="active" id="project3">
+      <div class="row justify-content-center align-items-center">
+    </a>
+
+        <div class="col-lg-4 col-md-5 col-sm-8 col-xs-1 col-md-2">
+          <img src="images/projects/project3.png" class="img-fluid" alt="">
+        </div>
+
+        <div class="col">
+
+          <div class="container my-4">
+
+            <!-- <a id="project3"> -->
+            <h3>DIGLaB : DIGital Lab Book</h3>
+            <!-- </a> -->
+            <p>
+              by Fred Barthelemy, Sylvain Takerkart & Julia Sprenger
+            </p>
+
+            <hr>
+
+            <button class="btn btn-link btn-outline-primary font-weight-bold" data-toggle="collapse" href="#collapse_project1" role="button" aria-controls="collapse_project1"><h4>Description</h3></button>
+
+            <section class="collapse" id="collapse_project1">
+              The goal of this project is to provide an user-friendly digital alternative to the classical lab book to the experimentalists working with non-human primates. The advantage of a digital version of the notebook are plenty:
+              <ul>
+                <li>Can be read by automatic process for storage of comments or metadata</li>
+                <li>Can help to automatize the writing of information in a click</li>
+                <li>Can help to adopt future INT (or other) standards easily (e.g. filenames)</li>
+                <li>Can be printed in case of need</li>
+                <li>Avoid fastidious decoding of someone else's handwriting</li>
+              </ul>
+
+              The following points are going to be addressed in this project:
+
+              <ul>
+                <li>Present the current version</li>
+                <li>Get feedback from future users</li>
+                <li>Provide personalized versions to the users that want to use it</li>
+                <li>Develop a tool for automatice metadata collection from saved DIGLaBs</li>
+              </ul>
+            </section>
+
+          </div>
+        </div>
+      </div>
+
+      <div class="row justify-content-center">
+        <div class="col" data-aos="fade-left" data-aos-delay="100">
+          <h4>Required skills</h4>
+          This is a python based project, a github link will be provided to collaborate.
+        </div>
+
+      <div class="row justify-content-center mt-4">
+
+          <div class="progress">
+            <div class="progress-bar bg-info font-weight-bold" role="progressbar" style="width: 70%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+              Doing experiments 70%
+            </div>
+          </div>
+
+          <div class="progress">
+            <div class="progress-bar bg-success font-weight-bold" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+              Javascript 50%
+            </div>
+          </div>
+
+          <div class="progress">
+            <div class="progress-bar bg-danger font-weight-bold" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+              Python 50%
+            </div>
+          </div>
+
+        </div>
+      </div>
+      <hr style="height:20px">
+    <!-- =========================== -->
+
     </section>
 
 
