Add missing hacking slot

--- a/index.html
+++ b/index.html
@@ -244,6 +244,10 @@
                 </td>
               </tr>
               <tr>
+                <th scope="row" class="align-middle text-nowrap">15h00-16h00</th>
+                <td class="table-success"><b>Hacking</b></td>
+              </tr>
+              <tr>
                 <th scope="row" class="align-middle text-nowrap">16h00-17h00</th>
                 <td class="table-primary"><b>Wrapping up about the projects with everybody, Ending and virtual beer !</b></td>
               </tr>
