Set 10% width for the time

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <table class="table table-striped">
           <tbody>
             <tr>
-              <th scope="row" class="align-middle text-nowrap">09h00-10h15</th>
+              <th scope="row" class="align-middle text-nowrap" style="width: 10%">09h00-10h15</th>
               <td class="table-primary"><b>Introduction to the BrainHack Marseille</b>
                 <ul>
                   <li>09h00-09h15 - Introduction to the event</li>
@@ -195,7 +195,7 @@
           <tbody>
             <tr>
             <tr>
-              <th scope="row" class="align-middle text-nowrap">09h00-11h30</th>
+              <th scope="row" class="align-middle text-nowrap" style="width: 10%">09h00-11h30</th>
               <td class="table-success"><b>Hacking</b></td>
             </tr>
             <tr>
@@ -230,7 +230,7 @@
             <tbody>
               <tr>
               <tr>
-                <th scope="row" class="align-middle text-nowrap">09h00-12h30</th>
+                <th scope="row" class="align-middle text-nowrap" style="width: 10%">09h00-12h30</th>
                 <td class="table-success"><b>Hacking</b></td>
               </tr>
               <tr>
